# mailgym

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  data.py  environment.py  graders.py
tests/: stress_test.py
